--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
+    "crypto-js": "^4.1.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
@@ -15,10 +16,12 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
+    "node-schedule": "^2.1.0",
     "nodemon": "^2.0.19",
     "nunjucks": "^3.2.3",
-    "passport": "^0.6.0",
+    "passport": "^0.5.3",
     "passport-local": "^1.0.0",
+    "request": "^2.88.2",
     "sequelize": "^6.21.3",
     "sequelize-cli": "^6.4.1"
   }
